--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>COTI V2 Private Balance Scanner</title>
+    <meta name="description" content="A simple tool to scan and decrypt your private token balances on COTI V2 Network." />
   </head>
   <body>
     <div id="root"></div>
